# sdl2

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  SDL-Audio.html  SDL-Events.html  SDL-Exception.html  SDL-Filesystem.html  SDL-Haptic.html  SDL-Hints.html  SDL-Init.html  SDL-Input-GameController.html  SDL-Input-Joystick.html  SDL-Input-Keyboard.html  SDL-Input-Mouse.html  SDL-Input.html  SDL-Joystick.html  SDL-Power.html  SDL-Raw-Audio.html  SDL-Raw-Basic.html  SDL-Raw-Enum-Pattern.html  SDL-Raw-Enum.html  SDL-Raw-Event.html  SDL-Raw-Filesystem.html  SDL-Raw-Haptic.html  SDL-Raw-Platform.html  SDL-Raw-Power.html  SDL-Raw-Thread.html  SDL-Raw-Timer.html  SDL-Raw-Types.html  SDL-Raw-Video.html  SDL-Raw.html  SDL-Time.html  SDL-Timers.html  SDL-Video-OpenGL.html  SDL-Video-Renderer.html  SDL-Video.html  SDL-Window.html  SDL.html  (+64 more)
.github/workflows/: workflow.yml
Graphics/UI/: SDL.hs
Graphics/UI/SDL/: Audio.hs  Basic.hs  Enum.hsc  Error.hs  Event.hs  Filesystem.hs  Haptic.hs  Platform.hs  Power.hs  Thread.hs  Timer.hs  Types.hsc  Video.hs
Graphics/UI/SDL/Enum/: Internal.hsc  Pattern.hsc
SDL/: Video.hs
SDL/Raw/: Enum.hsc  Filesystem.hs  Platform.hs  Power.hs  Types.hsc  Video.hs
bench/: Space.hs
cbits/: sdlhelper.c
doc/html/sdl2/: SDL-Audio.html  SDL-Raw-Thread.html  SDL-Raw-Types.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-G.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-S.html  doc-index-T.html  doc-index-W.html  doc-index.html  index-frames.html  mini_SDL-Raw-Audio.html  mini_SDL-Raw-Enum.html  mini_SDL-Raw-Filesystem.html  mini_SDL-Raw-Haptic.html  mini_SDL-Raw-Power.html  mini_SDL-Raw-Timer.html
examples/: AudioExample.hs  EventWatch.hs  OpenGLExample.hs  RenderGeometry.hs  UserEvents.hs
examples/bergey/: Main.hs
examples/lazyfoo/: Lesson01.hs  Lesson02.hs  Lesson03.hs  Lesson04.hs  Lesson05.hs  Lesson07.hs  Lesson08.hs  Lesson09.hs  Lesson10.hs  Lesson11.hs  Lesson12.hs  Lesson13.hs  Lesson14.hs  Lesson15.hs  Lesson16.hs  Lesson17.hs  Lesson18.hs  Lesson19.hs  Lesson20.hs  Lesson43.hs
examples/twinklebear/: Lesson01.hs  Lesson02.hs  Lesson04.hs  Lesson04a.hs  Lesson05.hs
include/: sdlhelper.h
scripts/: find_missing_symbols.sh  update-haddocks
sdl2/: SDL-Raw-Audio.html  SDL-Raw-Basic.html  SDL-Raw-Enum.html  SDL-Raw-Power.html  SDL-Raw-Timer.html  SDL-Raw-Video.html  SDL-Video.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-U.html  doc-index-V.html  mini_SDL-Audio.html  mini_SDL-Raw-Thread.html  mini_SDL-Video.html  sdl2.haddock
src/: Data-Bitmask.html  SDL-Audio.html  SDL-Event.html  SDL-Events.html  SDL-Exception.html  SDL-Filesystem.html  SDL-Haptic.html  SDL-Hint.html  SDL-Hints.html  SDL-Init.html  SDL-Input-GameController.html  SDL-Input-Joystick.html  SDL-Input-Keyboard.html  SDL-Input-Mouse.html  SDL-Input.html  SDL-Internal-Numbered.html  SDL-Internal-Types.html  SDL-Joystick.html  SDL-Power.html  SDL-Raw-Audio.html  SDL-Raw-Basic.html  SDL-Raw-Enum-Internal.html  SDL-Raw-Enum-Pattern.html  SDL-Raw-Enum.html  SDL-Raw-Event.html  SDL-Raw-Filesystem.html  SDL-Raw-Haptic.html  SDL-Raw-Platform.html  SDL-Raw-Power.html  SDL-Raw-Thread.html  SDL-Raw-Timer.html  SDL-Raw-Types.html  SDL-Raw-Video.html  SDL-Raw.html  SDL-Time.html  SDL-Video-OpenGL.html  SDL-Video-Renderer.html  SDL-Video.html  SDL-Window.html  SDL.hs  (+1 more)
src/Data/: Bitmask.hs
src/SDL/: Audio.hs  Event.hs  Events.hs  Exception.hs  Filesystem.hs  Haptic.hs  Hint.hs  Hints.hs  Init.hs  Input.hs  Joystick.hs  Power.hs  Raw.hs  Time.hs  Timers.hs  Vect.hs  Video.hs  Window.hs
src/SDL/Input/: GameController.hs  Joystick.hs  Keyboard.hs  Mouse.hs
src/SDL/Input/Keyboard/: Codes.hs
src/SDL/Internal/: Exception.hs  Numbered.hs  Types.hs  Vect.hs
src/SDL/Raw/: Audio.hs  Basic.hs  Enum.hsc  Error.hs  Event.hs  Filesystem.hs  Haptic.hs  Platform.hs  Power.hs  Thread.hs  Timer.hs  Types.hsc  Video.hs
src/SDL/Raw/Enum/: Internal.hsc  Pattern.hsc
src/SDL/Video/: OpenGL.hs  Renderer.hs  Vulkan.hs
