name:                sdl2
version:             1.3.1
synopsis:            Low-level bindings to SDL2
description:         Low-level bindings to the SDL2 library, version 2.0.3.
license:             BSD3
license-file:        LICENSE
author:              Gabríel Arthúr Pétursson
maintainer:          gabriel@system.is
copyright:           Copyright © 2013, 2014  Gabríel Arthúr Pétursson
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:
  ChangeLog.md,
  cbits/sdlhelper.c,
  include/sdlhelper.h

source-repository head
  type:     git
  location: https://github.com/haskell-game/sdl2.git

source-repository this
  type:     git
  location: https://github.com/haskell-game/sdl2.git
  tag:      v1.3.0

library
  ghc-options: -Wall

  exposed-modules:
    Graphics.UI.SDL
    Graphics.UI.SDL.Audio
    Graphics.UI.SDL.Basic
    Graphics.UI.SDL.Enum
    Graphics.UI.SDL.Event
    Graphics.UI.SDL.Filesystem
    Graphics.UI.SDL.Haptic
    Graphics.UI.SDL.Platform
    Graphics.UI.SDL.Power
    Graphics.UI.SDL.Thread
    Graphics.UI.SDL.Timer
    Graphics.UI.SDL.Types
    Graphics.UI.SDL.Video

  c-sources:
    cbits/sdlhelper.c

  include-dirs:
    include

  includes:
    SDL.h
    sdlhelper.h

  extra-libraries:
    SDL2

  pkgconfig-depends:
    sdl2 >= 2.0.3

  build-depends:
    base >= 4.7 && < 5,
    transformers >= 0.2 && < 0.5

  default-language:
    Haskell2010
